--- a/src/styles/RecipesItem.module.css
+++ b/src/styles/RecipesItem.module.css
@@ -1,9 +1,30 @@
 .recipeItem {
-  border: 1px solid black;
-  padding: 20px;
+  /* border: 1px solid lightgray; */
+  max-width: 250px;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .image {
   height: 200px;
-  width: 200px;
+  width: 250px;
+}
+
+.text {
+  padding: 10px 20px 15px 20px;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.time {
+  display: flex;
+  align-items: flex-end;
+  gap: 5px;
+  color: rgb(131, 131, 131);
 }
