--- a/src/styles/RecipesItem.module.css
+++ b/src/styles/RecipesItem.module.css
@@ -1,30 +1,80 @@
 .recipeItem {
-  /* border: 1px solid lightgray; */
-  max-width: 250px;
+  border: 1px solid #dce1e74b;
+  max-width: 300px;
   border-radius: 15px;
   overflow: hidden;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.recipeItem:hover {
+  border: 1px solid #dce1e7;
 }
 
 .image {
   height: 200px;
-  width: 250px;
+  width: 300px;
 }
 
 .text {
-  padding: 10px 20px 15px 20px;
+  padding: 20px 25px 15px 25px;
 }
 
 .title {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 15px;
 }
 
 .time {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+  gap: 3px;
+  /* color: rgb(131, 131, 131); */
+  font-size: 0.8rem;
+}
+
+.time > p {
+  margin-bottom: 2px;
+}
+
+.stats {
+  display: grid;
+  grid-template-columns: 1.2fr 1fr;
   gap: 5px;
-  color: rgb(131, 131, 131);
+}
+
+.stats > div {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+
+.stats > div > p {
+  margin-bottom: 2.5px;
+  font-size: 0.9rem;
+  /* font-weight: bold; */
+}
+
+.statsIcon {
+  background-color: #2a2b2f;
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.statsIcon svg {
+  color: darkgray;
+}
+
+.statsRightSide,
+.statsLeftSide {
+  margin-bottom: 10px;
 }
