--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,7 +1,8 @@
 .footer {
-  background-color: #212528;
+  /* background-color: #212528; */
   color: white;
   padding-block: 10px;
+  border-top: 1px solid #dce1e74b;
 }
 
 .footer p {
