--- a/src/styles/Recipes.module.css
+++ b/src/styles/Recipes.module.css
@@ -1,18 +1,16 @@
 .recipes {
-  min-height: calc(100vh - 123px);
-  max-width: 1200px;
-  margin-inline: auto;
 }
 
 .recipes h1 {
   text-align: center;
-  padding-block: 20px;
+  padding-top: 30px;
+  padding-bottom: 40px;
 }
 
 .recipesList {
   display: flex;
   flex-wrap: wrap;
-  gap: 40px;
+  gap: 50px;
   justify-content: center;
-  padding: 20px;
+  padding-inline: 20px;
 }
