--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -2,6 +2,7 @@
   /* background-color: #212528; */
   height: 75px;
   border-bottom: 1px solid #585b63;
+  font-family: "GoodTimes";
 }
 
 .navbar img {
