--- a/src/styles/RecipePage.module.css
+++ b/src/styles/RecipePage.module.css
@@ -30,34 +30,58 @@ h2 {
   font-weight: 200;
 }
 
+@media screen and (max-width: 500px) {
+  h1 {
+    padding-top: 15px;
+  }
+  .creator a {
+    padding-bottom: 15px;
+  }
+}
+
 .creator,
 .stats {
   border-bottom: 1px solid #585b63;
   font-family: "GoodTimes";
+  margin-inline: auto;
+}
+
+.creator {
+  max-width: 750px;
 }
 
 .stats {
-  padding-block: 25px;
+  padding-block: 15px;
   font-weight: 200;
 }
 
 .grid {
   display: grid;
   grid-template-columns: 1.5fr 2fr;
+  border-bottom: 1px solid #585b63;
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 800px) {
+  .grid {
+    grid-template-columns: 1fr;
+    margin-bottom: 50px;
+  }
+
+  .grid h2 {
+    text-align: center;
+  }
 }
 
 .ingredients,
 .directions {
   font-weight: 200;
-  border-bottom: 1px solid #585b63;
-  margin-bottom: 50px;
-  padding-bottom: 50px;
 }
 
 .ingredients h2,
 .directions h2 {
   margin-top: 25px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .ingredients li {
@@ -71,7 +95,12 @@ li {
   margin-left: 0;
 }
 
+.directions {
+  padding-bottom: 50px;
+}
+
 .videoDescription {
   font-weight: 200;
   padding-bottom: 10px;
+  text-align: center;
 }
