--- a/src/styles/RecipesItem.module.css
+++ b/src/styles/RecipesItem.module.css
@@ -83,7 +83,7 @@
   width: 35px;
   height: 35px;
   border-radius: 5px;
-  padding: -5px;
+  /* padding: -5px; */
 
   display: flex;
   justify-content: center;
