--- a/src/styles/RecipePage.module.css
+++ b/src/styles/RecipePage.module.css
@@ -8,7 +8,7 @@
   margin-inline: 15px;
 }
 
-h1 {
+.container h1 {
   padding-top: 30px;
   padding-bottom: 15px;
   text-align: center;
@@ -23,7 +23,7 @@ h1 {
   margin-inline: auto;
   gap: 15px;
   align-items: center;
-  padding-bottom: 25px;
+  padding-bottom: 5px;
 }
 
 h2 {
@@ -41,8 +41,8 @@ h2 {
 
 .creator,
 .stats {
-  border-bottom: 1px solid #585b63;
-  font-family: "GoodTimes";
+  /* border-bottom: 1px solid #585b63; */
+  /* font-family: "GoodTimes"; */
   margin-inline: auto;
 }
 
@@ -51,15 +51,18 @@ h2 {
 }
 
 .stats {
-  padding-block: 15px;
+  padding-bottom: 15px;
   font-weight: 200;
+  border-bottom: 1px solid #585b63;
 }
 
 .grid {
   display: grid;
   grid-template-columns: 1.5fr 2fr;
-  border-bottom: 1px solid #585b63;
   margin-bottom: 40px;
+
+  max-width: 900px;
+  margin-inline: auto;
 }
 
 @media screen and (max-width: 800px) {
@@ -69,7 +72,7 @@ h2 {
   }
 
   .grid h2 {
-    text-align: center;
+    /* text-align: center; */
   }
 }
 
@@ -88,19 +91,33 @@ h2 {
   line-height: 2;
 }
 
-ul,
-ol,
-li {
+.ingredients li {
+  list-style-type: none;
+  position: relative;
+}
+
+.ingredients li::before {
+  content: "";
+  width: 8px;
+  height: 8px;
+  border-radius: 10px;
+  position: absolute;
+  left: -5px;
+  top: 12px;
+  background-color: #d0d0d0;
+}
+
+.grid ul,
+.grid ol,
+.grid li {
   padding-left: 17px;
   margin-left: 0;
 }
 
-.directions {
-  padding-bottom: 50px;
-}
-
 .videoDescription {
-  font-weight: 200;
-  padding-bottom: 10px;
+  border-top: 1px solid #585b63;
+  padding-top: 30px;
+  font-weight: 300;
+  padding-bottom: 15px;
   text-align: center;
 }
