--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -13,3 +13,16 @@
   justify-content: center;
   gap: 4px;
 }
+
+.footer a {
+  gap: 10px;
+}
+
+.githubLogo {
+  transition: all 0.2s;
+  margin-left: 5px;
+}
+
+.githubLogo:hover {
+  transform: scale(1.3) rotate(360deg);
+}
