--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,124 @@
+@font-face {
+  font-family: "Biotif";
+  src: url("./assets/biotif/Biotif-Bold.woff");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Biotif";
+  src: url("./assets/biotif/Biotif-Medium.woff");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Biotif";
+  src: url("./assets/biotif/Biotif-Regular.woff");
+  font-weight: 400;
+}
+
+/*------------------------------------*\
+  # CSS RESET
+\*------------------------------------*/
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
+}
+
+/*
+  3. Allow percentage-based heights in the application
+*/
+html,
+body {
+  height: 100%;
+}
+
+/*
+  Typographic tweaks!
+  4. Add accessible line-height
+  5. Improve text rendering
+*/
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
+/*
+  6. Improve media defaults
+*/
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+/*
+  7. Remove built-in form typography styles
+*/
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/*
+  8. Avoid text overflows
+*/
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/*
+  9. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
+}
+
+/* END OF RESET */
+
 body,
 html {
   overflow-x: hidden;
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+button {
+  cursor: pointer;
+  background-color: transparent;
+  border: transparent;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+body {
+  background-color: #202124;
+  color: #f8f9fa;
+  /* font-family: "GoodTimes"; */
+  font-family: "Biotif";
+}
+
+h1,
+h2 {
+  font-family: "Biotif";
 }
