--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -2,7 +2,8 @@
   /* background-color: #585b63; */
   border-top: 1px solid #585b63;
   color: white;
-  padding-block: 10px;
+  padding-top: 10px;
+  padding-bottom: 15px;
 }
 
 .footer p {
