Fix padding and margins, add content

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,10 +4,9 @@
   align-items: center;
 
   gap: 50px;
-  padding: 20px;
-  padding-block: 20px;
-  min-height: calc(100vh - 124px);
-  /* margin-inline: 20px; */
+  padding: 40px 20px;
+
+  min-height: calc(100vh - 129px);
 }
 
 .heroOne {
@@ -29,6 +28,8 @@
   font-size: 3.5rem;
   margin-bottom: 15px;
   text-align: start;
+  line-height: 1;
+  margin-top: -15px;
 }
 
 .heroOne br {
